<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_users_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeUsersActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_user_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="@string/welcome_user_message"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/author_textview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/author_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/version_number"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:id="@+id/locate_items_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locate_items" />

        <Button
            android:id="@+id/add_items_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_items" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>